# warp-fusion

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  dependabot-branch-filter.yml  release.yml
_gal/: vfm.gxl  work.gxl
crates/init_tpl/: run.sh  smoke.sh
crates/init_tpl/src/: templates.rs
crates/wf-project-remote/: Cargo.toml
crates/wf-project-remote/src/: lib.rs  managed.rs  repo.rs  test_support.rs  tests.rs
crates/wfadm/: Cargo.toml  build.rs
crates/wfadm/src/: check.rs  conf.rs  config.rs  connectors.rs  engine.rs  init.rs  main.rs  self_update.rs  sink.rs
crates/wfadm/src/init_tpl/: mod.rs  scope.rs  templates.rs
crates/wfadm/src/project_remote/: managed.rs  mod.rs  repo.rs  state.rs  test_support.rs
crates/wfadm/templates/: smoke.sh  test_run.sh
crates/wfadm/templates/conf/: wfusion.toml  windows.toml
crates/wfadm/templates/models/scenarios/: attack_chain.wfg.bak
crates/wfadm/templates/models/schemas/: data.wfs  management.wfs  network.wfs  windows.toml
crates/wfadm/templates/test/: wfusion.batch.toml
crates/wfgen/: Cargo.toml
crates/wfgen/examples/avg/scenarios/: dns_tunnel.wfg
crates/wfgen/examples/avg/schemas/: dns.wfs
crates/wfgen/examples/conv/scenarios/: top_scanners.wfg
crates/wfgen/examples/conv/schemas/: network.wfs
crates/wfgen/examples/count/scenarios/: brute_force.wfg
crates/wfgen/examples/count/schemas/: security.wfs
crates/wfgen/examples/distinct/scenarios/: port_scan.wfg
crates/wfgen/examples/multi_step/scenarios/: chain_attack.wfg
crates/wfgen/examples/sum/scenarios/: data_exfil.wfg
crates/wfgen/src/: cmd_bench.rs  cmd_gen.rs  cmd_helpers.rs  cmd_lint.rs  cmd_send.rs  cmd_stream.rs  cmd_verify.rs  error.rs  injection_targets.rs  lib.rs  loader.rs  main.rs  tcp_send.rs  wfg_ast.rs
crates/wfgen/src/datagen/: fault_gen.rs  field_gen.rs  mod.rs  stream_gen.rs
crates/wfgen/src/datagen/inject_gen/: dispatch.rs  extract.rs  helpers.rs  hit.rs  mod.rs  near_miss.rs  non_hit.rs  structures.rs
crates/wfgen/src/datagen/tests/: event.rs  inject.rs  mod.rs
crates/wfgen/src/oracle/: mod.rs  tests.rs
crates/wfgen/src/output/: arrow_ipc.rs  jsonl.rs
crates/wfgen/src/validate/: oracle.rs  stream_schema.rs  syntax.rs
crates/wfgen/src/validate/tests/: field.rs  mod.rs  syntax.rs
crates/wfgen/src/wfg_parser/: mod.rs  syntax.rs  tests.rs
crates/wfgen/tests/: e2e_datagen.rs  e2e_mvp.rs
crates/wfl/: Cargo.toml
crates/wfl/src/: cmd_explain.rs  cmd_fmt.rs  cmd_lint.rs  cmd_replay.rs  cmd_replay_verify.rs  cmd_test.rs  error.rs  lib.rs  main.rs
crates/wfl/tests/: replay_e2e.rs
crates/wfusion/: Cargo.toml
crates/wfusion/src/: admin_api.rs  admin_api_tests.rs  cli_config.rs  main.rs  register.rs
docker/: Dockerfile
docker/default_setting/: smoke.sh  test_run.sh
docker/default_setting/conf/: wfusion.toml
docker/default_setting/test/: wfusion.batch.toml
docs/: admin_api.md  cli.md  configuration.md  getting-started.md  monitoring-design.md  rules.md  schema.md  usage.md  wparse-window-routing.md
docs/config/: sink.md  source.md
docs/design/: admin_api_alignment.md  admin_api_reload_design.md  project_remote_alignment.md  stream_tag_routing.md  wfadm.md  wparse_window_routing.md
docs/useage/: README.md  getting-started.md  rules.md
docs/useage/cli/: cli.md
docs/useage/config/: configuration.md  knowdb.md  logging.md  metrics.md  runtime.md  schema.md  source.md  window.md  wparse-window-routing.md
examples/: README.md
examples/close_demo/: wfusion.toml  windows.toml
examples/port_scan_whitelist/: README.md  knowdb.toml  wfusion.toml  windows.toml
examples/port_scan_whitelist/data/: conn_events.ndjson  scanner_whitelist.ndjson
examples/port_scan_whitelist/rules/: close_demo.wfl  port_scan_whitelist.wfl  simple.wfl
examples/port_scan_whitelist/schemas/: network.wfs
examples/rat_propagation/: README.md  wfusion.toml  windows.toml
examples/rules/: README.md  run_all.sh
examples/rules/close_demo/: README.md  run.sh  wfusion.toml  windows.toml
examples/rules/function_demo/: README.md  run.sh  windows.toml
examples/rules/multi_stream_multi_window/: README.md  run.sh
examples/rules/port_scan_whitelist/: docker-compose.yml  knowdb.toml  run.sh  wfusion.toml  windows.toml
examples/rules/rat_propagation/: README.md  run.sh  wfusion.toml  windows.toml
examples/rules/single_stream_multi_window/: README.md  run.sh  wfusion.toml  windows.toml
examples/rules/sqli_probe/: run.sh  wfusion.toml  windows.toml
examples/rules/ssh_brute_force/: README.md  knowdb.toml  run.sh  wfusion.toml  windows.toml
examples/rules/weak_password/: README.md  run.sh  wfusion.toml  windows.toml
examples/rules/weak_password2/: docker-compose.yml  knowdb.toml  wfusion.toml  windows.toml
examples/rules/window_miss/: README.md  run.sh  wfusion.toml  windows.toml
examples/sqli_probe/: README.md  wfusion.toml  windows.toml
examples/ssh_brute_force/: wfusion.toml  windows.toml
examples/weak_password/: README.md  wfusion.toml  windows.toml
examples/weak_password/data/: auth_events.ndjson  weak_password_list.ndjson
examples/weak_password/rules/: weak_password.wfl
examples/weak_password2/: README.md  run.sh  wfusion.toml  windows.toml
examples/wp-pipeline/: deps-check.sh
examples/wp-pipeline/demo/: README.md  run.sh
examples/wp-pipeline/kafka/: README.md  run.sh
examples/wp-pipeline/streaming/: run.sh
scripts/: extract-changelog.sh  migrate-to-three-branches.sh  prepare-release.sh  update-local-manifest.sh
skills/: test-pipeline-guide.md
src/: main.rs
tests/: config_cli.rs
tests/fixtures/: auth_security_windows.toml  base_windows.toml
updates/: README.md
updates/alpha/: manifest.json
updates/alpha/versions/: v0.1.18-alpha.6.json  v0.1.19-alpha.json  v0.1.20-alpha.json  v0.1.21-alpha.json  v0.1.22-alpha.json  v0.1.25-alpha.json  v0.1.26-alpha.json  v0.1.28-alpha.json  v0.1.30-alpha.json  v0.1.31-alpha.json  v0.1.32-alpha.json  v0.1.34-alpha.json  v0.1.35-alpha.json  v0.1.36-alpha.json  (+1 more)
updates/stable/: manifest.json
(+197 files in other folders)
