[workspace]
members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
default-members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
winnow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc"] }
async-trait = "0.1"
orion-error = { version = "0.8.1", features = ["derive", "serde_json", "toml", "tracing"] }

wf-engine = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.12" }
wf-config = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.12" }
wf-lang = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.12" }
wf-runtime = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.12" }
wf-connector-api =  "0.1"
wp-connectors = { git = "https://github.com/wp-labs/wp-connectors.git", tag = "v0.15.4" }
wp-core-connectors = "0.5.0"
