[workspace]
members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
default-members = ["crates/wfusion", "crates/wfgen", "crates/wfl"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
winnow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc"] }
async-trait = "0.1"
orion-error = { version = "0.8.1", features = ["derive", "serde_json", "toml", "tracing"] }
# @gxl:block(remote_reactor)
#wf-engine = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.18" }
#wf-config = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.18" }
#wf-lang = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.18" }
#wf-runtime = { git = "https://github.com/wp-labs/wp-reactor.git", tag = "v0.1.18" }
# @gxl:end(remote_reactor)
# @gxl:block(local_reactor)
wf-engine = { path = "../wp-reactor/crates/wf-engine" }
wf-config = { path = "../wp-reactor/crates/wf-config" }
wf-lang = { path = "../wp-reactor/crates/wf-lang" }
wf-runtime = { path = "../wp-reactor/crates/wf-runtime" }
# @gxl:end(local_reactor)


wf-connector-api =  "0.1"
wp-connectors = { git = "https://github.com/wp-labs/wp-connectors.git", tag = "v0.15.6" }
wp-core-connectors = "0.5.5"
