[package]
name = "wf-project-remote"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "wf_project_remote"
path = "src/lib.rs"

[dependencies]
git2 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
wf-config = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[features]
# Exposes `test_support` (local git remote fixtures) for downstream crates'
# integration tests. Not intended for production use.
test-support = []
