[package]
name = "wfgen"
version = "0.1.9" #@gxl:set(version)
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfgen"
path = "src/main.rs"

[lib]
name = "wfgen"
path = "src/lib.rs"

[dependencies]
wf-engine.workspace = true
wf-config.workspace = true
wf-lang.workspace = true
winnow = { workspace = true }
orion-error = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
wp-arrow = "0.1"

[dev-dependencies]
wf-runtime = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tempfile = "3"
