[package]
name = "wfgen"
version = "0.1.18" #@gxl:set(version)
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfgen"
path = "src/main.rs"

[lib]
name = "wfgen"
path = "src/lib.rs"

[dependencies]
wf-engine.workspace = true
wf-config.workspace = true
wf-lang.workspace = true
winnow = { workspace = true }
orion-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }
wp-arrow = { workspace = true }
wp-core-connectors.workspace = true
tokio = { workspace = true }
wp-connector-api = { workspace = true }

[dev-dependencies]
wf-runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tempfile = "3"
