[package]
name = "wfl"
version = "0.1.22" #@gxl:set(version)
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfl"
path = "src/main.rs"

[lib]
name = "wfl"
path = "src/lib.rs"

[dependencies]
wf-config.workspace = true
wf-lang.workspace = true
wf-engine.workspace = true
wfgen = { path = "../wfgen" }
tree-sitter = "0.26"
tree-sitter-wfl = { git = "https://github.com/wp-labs/tree-sitter-wfl.git", branch = "main" }
orion-error = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
