[package]
name = "wfusion"
version = "0.1.14" #@gxl:set(version)
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfusion"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
wf-runtime.workspace = true
wp-connectors.workspace = true
wp-core-connectors.workspace = true
wfl = { path = "../wfl" }
wf-config.workspace = true
orion-error.workspace = true
clap = { workspace = true }
tracing = { workspace = true }
moju-derive = { git = "https://github.com/dayu-sec/moju-derive.git", branch = "main" }

[dev-dependencies]
tempfile = "3"
