[package]
name = "wfusion"
version = "0.1.29" #@gxl:set(version)
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfusion"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
wf-runtime.workspace = true
wp-connectors.workspace = true
wp-core-connectors.workspace = true
wf-config.workspace = true
wf-project-remote = { workspace = true }
orion-error.workspace = true
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
moju-derive = { git = "https://github.com/dayu-sec/moju-derive.git", branch = "main" }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
wf-project-remote = { workspace = true, features = ["test-support"] }
git2 = { workspace = true }
